--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@dfinity/agent": "^0.15.6",
     "@dfinity/candid": "^0.15.6",
-    "@dfinity/principal": "^0.15.6"
+    "@dfinity/principal": "^0.15.6",
+    "plyr": "^3.7.8"
   },
   "devDependencies": {
     "assert": "2.0.0",
